# SolidarieData

./: README.md  RemoverPessoa.py  pyproject.toml
docs/: README.md
projeto_clarear/: ExportarCSV.py  Relatorio.py  Sair.py  edit_report.py  main.py  search_report.py
projeto_clarear/backend/: add_report.py  app.py  auth.py  db.py  models.py  projeto.db  requirements.txt  ver_usuarios.py
projeto_clarear/backend/templates/: criar_prontuario.html  index.html  login.html  register.html  ver_prontuario.html
projeto_clarear/datamigration/: migrate_txt_to_db.py
tests/: Setembro.txt
