[tool.poetry]
name = "projeto-clarear"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "projeto_clarear"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.3.0"
poetry = "^1.8.2"
nuitka = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
